<resources>
    <string name="app_name">Musicfy</string>

    <string name="txt_cadastrado">Cadastrado com sucesso!</string>
    <string name="txt_erro_cadastrado">Houve um Erro ao Cadastrar!</string>
    <string name="txt_erro">Houve um Erro!</string>


    <string name="txt_musica">
        Nome da musica:  %1$s,
        Artista: %2$s,
        Album:  %3$s
    </string>

    <string name="titulo">Minhas Músicas</string>
    <string name="bem_vindo_ao_app">Bem Vindo ao Musicfy!</string>
    <string name="slogan">Você é o que você ouve!</string>
    <string name="senha_titulo">SENHA</string>
    <string name="senha">Senha</string>
    <string name="cadastro_musica">Cadastrar Musica</string>
    <string name="minhas_musicas">Minhas Músicas</string>
    <string name="add_musicas">Add Músicas</string>
    <string name="adic_musicas">Adicionar Músicas</string>
    <string name="save_musica">Salvar</string>
    <string name="music_name">Nome da Música</string>
    <string name="music_artist">Nome do Artista</string>
    <string name="music_album">Nome do Album</string>

    <string name="nome_blank">Ei! Não pode esquecer o nome da música, né?</string>
    <string name="artista_blank">Poxa, precisamos saber o artista!</string>
    <string name="album_blank">A que álbum pertence essa música incrível?</string>


</resources>